--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Distribuidor de Entregas</title>
+  <title>Distribuir Entregas</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -14,7 +14,7 @@
       border-radius: 15px;
       background-color: #fff;
     }
-    input, textarea, button {
+    input, button {
       width: 100%;
       padding: 10px;
       margin: 10px 0;
@@ -30,6 +30,9 @@
     button:hover {
       background-color: #ffb733;
     }
+    .motoboy {
+      margin: 5px 0;
+    }
     .resultado a {
       display: block;
       margin-bottom: 10px;
@@ -38,48 +41,71 @@
   </style>
 </head>
 <body>
-  <h2>Distribuição de Entregas para Motoboys</h2>
+  <h2>Distribuição de Entregas</h2>
 
   <label for="pacotes">Quantidade Total de Pacotes:</label>
   <input type="number" id="pacotes" placeholder="Ex: 12" />
 
-  <label for="motoboys">Motoboys (nome, número com DDD e prioridade):</label>
-  <textarea id="motoboys" rows="6" placeholder="Exemplo:
-João,55999999999,1
-Maria,55888888888,2
-Carlos,55777777777,3"></textarea>
+  <h3>Selecione os motoboys:</h3>
+  <div id="motoboy-list">
+    <!-- Os motoboys fixos ficam aqui -->
+  </div>
 
   <button onclick="distribuir()">Distribuir e Gerar Mensagens</button>
 
   <div id="resultado" class="resultado"></div>
 
   <script>
+    // Lista fixa de motoboys com prioridade
+    const motoboys = [
+      { nome: "João", numero: "55999999999", prioridade: 1 },
+      { nome: "Maria", numero: "55888888888", prioridade: 2 },
+      { nome: "Carlos", numero: "55777777777", prioridade: 3 },
+      { nome: "Pedro", numero: "55666666666", prioridade: 4 },
+      { nome: "Ana", numero: "55555555555", prioridade: 5 }
+    ];
+
+    // Gera os checkboxes automaticamente
+    window.onload = () => {
+      const container = document.getElementById("motoboy-list");
+      motoboys.sort((a, b) => a.prioridade - b.prioridade).forEach((m, index) => {
+        container.innerHTML += `
+          <div class="motoboy">
+            <input type="checkbox" id="motoboy${index}" value="${index}" />
+            <label for="motoboy${index}">${m.nome} (prioridade ${m.prioridade})</label>
+          </div>
+        `;
+      });
+    };
+
     function distribuir() {
       const totalPacotes = parseInt(document.getElementById("pacotes").value);
-      const linhas = document.getElementById("motoboys").value.trim().split("\n");
-      const motoboys = linhas.map(linha => {
-        const [nome, numero, prioridade] = linha.split(",");
-        return { nome: nome.trim(), numero: numero.trim(), prioridade: parseInt(prioridade) };
-      }).sort((a, b) => a.prioridade - b.prioridade);
+      const selecionados = [];
 
-      if (motoboys.length === 0 || isNaN(totalPacotes) || totalPacotes <= 0) {
-        alert("Preencha todos os campos corretamente.");
+      motoboys.forEach((m, i) => {
+        const checkbox = document.getElementById("motoboy" + i);
+        if (checkbox && checkbox.checked) {
+          selecionados.push(m);
+        }
+      });
+
+      if (selecionados.length === 0 || isNaN(totalPacotes) || totalPacotes <= 0) {
+        alert("Selecione ao menos 1 motoboy e defina um número de pacotes válido.");
         return;
       }
 
-      const porMotoboy = Math.floor(totalPacotes / motoboys.length);
-      let sobra = totalPacotes % motoboys.length;
+      const porMotoboy = Math.floor(totalPacotes / selecionados.length);
+      let sobra = totalPacotes % selecionados.length;
+      let html = "<h3>Mensagens Geradas:</h3>";
 
-      let html = `<h3>Mensagens Geradas:</h3>`;
-
-      motoboys.forEach(motoboy => {
+      selecionados.forEach((m) => {
         let qtd = porMotoboy + (sobra > 0 ? 1 : 0);
         if (sobra > 0) sobra--;
 
-        const mensagem = `Olá ${motoboy.nome}, você foi selecionado para a rota do dia. Ficará responsável por ${qtd} pacotes. Boa entrega!`;
-        const url = `https://wa.me/${motoboy.numero}?text=${encodeURIComponent(mensagem)}`;
+        const mensagem = `Olá ${m.nome}, você foi selecionado para a rota do dia. Ficará responsável por ${qtd} pacotes. Boa entrega!`;
+        const url = `https://wa.me/${m.numero}?text=${encodeURIComponent(mensagem)}`;
 
-        html += `<a href="${url}" target="_blank">Enviar para ${motoboy.nome} (${motoboy.numero})</a>`;
+        html += `<a href="${url}" target="_blank">Enviar para ${m.nome} (${m.numero})</a>`;
       });
 
       document.getElementById("resultado").innerHTML = html;
