--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Distribuir Entregas</title>
+  <title>WL Transportes - Distribuição</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -13,6 +13,17 @@
       border: 2px solid #fca311;
       border-radius: 15px;
       background-color: #fff;
+      text-align: center;
+    }
+    header img {
+      width: 100%;
+      max-width: 300px;
+      margin-bottom: 10px;
+    }
+    header h1 {
+      margin: 10px 0;
+      font-size: 24px;
+      color: #c1121f;
     }
     input[type="number"], button {
       width: 100%;
@@ -34,12 +45,14 @@
     .motoboy {
       margin: 10px 0;
       font-size: 18px;
+      text-align: left;
     }
     .resultado a {
       display: block;
       margin-bottom: 12px;
       color: green;
       font-weight: bold;
+      text-align: left;
     }
     @media (max-width: 600px) {
       input, button {
@@ -49,7 +62,12 @@
   </style>
 </head>
 <body>
-  <h2>Distribuição de Entregas</h2>
+
+  <header>
+    <img src="logo-wl.jpeg" alt="Logo WL Transportes" />
+    <h1>WL TRANSPORTES</h1>
+    <p>Serviço de Entrega</p>
+  </header>
 
   <label for="pacotes">Quantidade Total de Pacotes:</label>
   <input type="number" id="pacotes" placeholder="Ex: 12" />
@@ -63,7 +81,6 @@
   <div id="resultado" class="resultado"></div>
 
   <script>
-    // Lista fixa de motoboys
     const motoboys = [
       { nome: "João", numero: "55999999999", prioridade: 1 },
       { nome: "Maria", numero: "55888888888", prioridade: 2 },
@@ -72,7 +89,6 @@
       { nome: "Ana", numero: "55555555555", prioridade: 5 }
     ];
 
-    // Salva seleção no navegador
     function salvarSelecionados() {
       const selecionados = motoboys.map((_, i) => {
         const check = document.getElementById("motoboy" + i);
@@ -81,7 +97,6 @@
       localStorage.setItem("motoboysSelecionados", JSON.stringify(selecionados));
     }
 
-    // Carrega seleção salva
     function carregarSelecionados() {
       const salvos = JSON.parse(localStorage.getItem("motoboysSelecionados")) || [];
       salvos.forEach((val, i) => {
@@ -90,7 +105,6 @@
       });
     }
 
-    // Gera a lista de checkboxes no carregamento
     window.onload = () => {
       const container = document.getElementById("motoboy-list");
       motoboys.sort((a, b) => a.prioridade - b.prioridade).forEach((m, index) => {
@@ -104,7 +118,6 @@
       carregarSelecionados();
     };
 
-    // Seleciona todos os motoboys
     function selecionarTodos() {
       motoboys.forEach((_, i) => {
         const check = document.getElementById("motoboy" + i);
@@ -113,7 +126,6 @@
       salvarSelecionados();
     }
 
-    // Faz a distribuição
     function distribuir() {
       const totalPacotes = parseInt(document.getElementById("pacotes").value);
       const selecionados = [];
@@ -147,5 +159,6 @@
       document.getElementById("resultado").innerHTML = html;
     }
   </script>
+
 </body>
 </html>
