--- a/index.html
+++ b/index.html
@@ -32,14 +32,35 @@
       color: #aaaaaa;
     }
 
-    input[type="number"], button {
-      width: 100%;
-      padding: 15px;
-      margin: 10px 0;
-      font-size: 18px;
-      border-radius: 8px;
-      border: none;
-    }
+   /* Estilo apenas para o input de pacotes */
+input[type="number"] {
+  width: 60%;              /* Diminui o tamanho */
+  padding: 10px;
+  font-size: 16px;
+  background-color: #333;
+  color: #fff;
+  border-radius: 8px;
+  border: none;
+  display: block;
+  margin: 10px auto;       /* Centraliza */
+}
+
+/* Estilo separado para os botões */
+button {
+  width: 100%;
+  padding: 15px;
+  margin: 10px 0;
+  font-size: 18px;
+  background-color: #c1121f;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+  border: none;
+  border-radius: 10px;
+}
+button:hover {
+  background-color: #ff4e00;
+}
     input[type="number"] {
       background-color: #333;
       color: #fff;
