--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
   <link rel="icon" type="image/png" href="favicon.png">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      max-width: 700px;
-      margin: 0 auto;
-      padding: 20px;
-      background-color: #1c1c1c;
-      color: #f0f0f0;
-    }
+  font-family: Arial, sans-serif;
+  max-width: 700px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #1c1c1c;
+  color: #f0f0f0;
+
+  background-image: url('marca.png');   /* imagem da logo como fundo */
+  background-size: 300px auto;          /* tamanho da logo */
+  background-position: center center;   /* centralizada */
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  opacity: 1;
+}
     header {
       text-align: center;
       margin-bottom: 20px;
