--- a/index.html
+++ b/index.html
@@ -6,20 +6,29 @@
   <title>WL Transportes - Distribuição</title>
   <link rel="icon" type="image/png" href="favicon.png">
   <style>
-    body {
+   body {
   font-family: Arial, sans-serif;
-  max-width: 700px;
-  margin: 0 auto;
-  padding: 20px;
+  margin: 0;
+  padding: 0;
   background-color: #1c1c1c;
   color: #f0f0f0;
+  position: relative;
+  z-index: 1;
+}
 
-  background-image: url('marca.png');   /* imagem da logo como fundo */
-  background-size: 300px auto;          /* tamanho da logo */
-  background-position: center center;   /* centralizada */
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  opacity: 1;
+/* Fundo como marca d'água */
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('marca.png') center center no-repeat;
+  background-size: contain; /* ou cover, se quiser preencher */
+  opacity: 0.05; /* transparência da marca d'água */
+  z-index: 0;
+  pointer-events: none;
 }
     header {
       text-align: center;
