--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ body::before {
 
   <header>
     <img src="logo-wl.jpeg" alt="Logo WL Transportes" />
-    <h1>WL TRANSPORTES</h1>
-    <p>Serviço de Entrega</p>
+    <h1>SELEÇÃO DE ENTREGADORES - WL</h1>
+    <p>Base Zé Doca - MA</p>
   </header>
 
   <label for="motoboysCount">Quantos motoboys para hoje?</label>
