--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body::before {
   height: 100%;
   background: url('marca.png') center center no-repeat;
   background-size: contain; /* ou cover, se quiser preencher */
-  opacity: 0.05; /* transparência da marca d'água */
+  opacity: 0.09; /* transparência da marca d'água */
   z-index: 0;
   pointer-events: none;
 }
@@ -85,7 +85,7 @@ body::before {
 
   <header>
     <img src="logo-wl.jpeg" alt="Logo WL Transportes" />
-    <h1>SELEÇÃO DE ENTREGADORES - WL</h1>
+    <h1>SELEÇÃO DE ENTREGADORES</h1>
     <p>Base Zé Doca - MA</p>
   </header>
 
