--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@ body::before {
       { nome: "Emerson", numero: "5598991711459", prioridade: 4 },
       { nome: "Moisés ", numero: "5598992037064", prioridade: 5 },
       { nome: "João Winicius", numero: "5598984643818", prioridade: 6 },
-      { nome: "Jhonatan", numero: "5519995437627", prioridade: 7 }
-       { nome: "Leovanil", numero: "5598970257699", prioridade: 8 }
-    { nome: "Miquéias", numero: "5598982146335", prioridade: 9 }
-    { nome: "José Lucas", numero: "5527995255423", prioridade: 10 }
-      { nome: "Rafael", numero: "5598991296494", prioridade: 11 }
+      { nome: "Jhonatan", numero: "5519995437627", prioridade: 7 } ,
+       { nome: "Leovanil", numero: "5598970257699", prioridade: 8 } ,
+    { nome: "Miquéias", numero: "5598982146335", prioridade: 9 } ,
+    { nome: "José Lucas", numero: "5527995255423", prioridade: 10 } ,
+      { nome: "Rafael", numero: "5598991296494", prioridade: 11 } ,
     ];
 
     function embaralhar(lista) {
